--- a/style.css
+++ b/style.css
@@ -74,11 +74,17 @@
     --lineHeight-4: 1.6em;
     --lineHeight-5: 1.85em;
     --lineHeight-6: 1.4em;
-    
+
     /* letter-spacing */
     --letterSpacing-1: 0.15em;
---letterSpacing-2: 0.4em;
---letterSpacing-3: 0.2em;
---letterSpacing-4: 0.3em;
---letterSpacing-5: 3px;
+    --letterSpacing-2: 0.4em;
+    --letterSpacing-3: 0.2em;
+    --letterSpacing-4: 0.3em;
+    --letterSpacing-5: 3px;
+    
+    /**
+    * SPACING
+    */
+    
+    --section-space: 70px;
 }
