--- a/style.css
+++ b/style.css
@@ -87,4 +87,15 @@
     */
     
     --section-space: 70px;
+    
+    /**
+    * SHADOW
+    */
+    
+    --shadow-1: 0px 0px 25px 0px hsla(0, 0%, 0%, 0.25);
+    
+    /**
+    * BORDER RADIUS
+    */
+    
 }
