--- a/style.css
+++ b/style.css
@@ -81,21 +81,30 @@
     --letterSpacing-3: 0.2em;
     --letterSpacing-4: 0.3em;
     --letterSpacing-5: 3px;
-    
+
     /**
     * SPACING
     */
-    
+
     --section-space: 70px;
-    
+
     /**
     * SHADOW
     */
-    
+
     --shadow-1: 0px 0px 25px 0px hsla(0, 0%, 0%, 0.25);
-    
+
     /**
     * BORDER RADIUS
     */
-    
+
+    --radius-24: 24px;
+    --radius-circle: 50%;
+
+    /**
+* TRANSITION
+*/
+    --transition-1: 250ms ease;
+    --transition-2: 500ms ease;
+    --transition-3: 1000ms ease;
 }
