--- a/style.css
+++ b/style.css
@@ -108,3 +108,51 @@
     --transition-2: 500ms ease;
     --transition-3: 1000ms ease;
 }
+
+/*-----------------------------------*\
+  #RESET
+\*-----------------------------------*/
+
+
+
+/*-----------------------------------*\
+  #TYPOGRAPHY
+\*-----------------------------------*/
+
+
+
+
+/*-----------------------------------*\
+  #REUSED STYLE
+\*-----------------------------------*/ 
+
+
+
+/*-----------------------------------*\
+  #PRELOAD
+\*-----------------------------------*/
+
+
+
+
+/*-----------------------------------*\
+  #TOPBAR
+\*-----------------------------------*/
+
+
+
+/*-----------------------------------*\
+  #HEADER
+\*-----------------------------------*/
+
+
+
+/*-----------------------------------*\
+  #HERO
+\*-----------------------------------*/
+
+
+
+/*-----------------------------------*\
+  #SERVICE
+\*-----------------------------------*/
