--- a/style.css
+++ b/style.css
@@ -113,46 +113,39 @@
   #RESET
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #TYPOGRAPHY
 \*-----------------------------------*/
 
-
-
-
 /*-----------------------------------*\
   #REUSED STYLE
-\*-----------------------------------*/ 
-
-
+\*-----------------------------------*/
 
 /*-----------------------------------*\
   #PRELOAD
 \*-----------------------------------*/
 
-
-
-
 /*-----------------------------------*\
   #TOPBAR
 \*-----------------------------------*/
-
-
 
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #SERVICE
 \*-----------------------------------*/
+
+
+/*-----------------------------------*\
+  #ABOUT
+\*-----------------------------------*/ 
+
+
+
+
