--- a/style.css
+++ b/style.css
@@ -141,11 +141,14 @@
   #SERVICE
 \*-----------------------------------*/
 
-
 /*-----------------------------------*\
   #ABOUT
-\*-----------------------------------*/ 
+\*-----------------------------------*/
 
 
+
+/*-----------------------------------*\
+  #SPECIAL DISH
+\*-----------------------------------*/
 
 
