--- a/style.css
+++ b/style.css
@@ -145,10 +145,12 @@
   #ABOUT
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #SPECIAL DISH
 \*-----------------------------------*/
 
 
+
+/*-----------------------------------*\
+  #MENU
+\*-----------------------------------*/ 
