--- a/style.css
+++ b/style.css
@@ -149,8 +149,12 @@
   #SPECIAL DISH
 \*-----------------------------------*/
 
+/*-----------------------------------*\
+  #MENU
+\*-----------------------------------*/
+
 
 
 /*-----------------------------------*\
-  #MENU
-\*-----------------------------------*/ 
+  #TESTIMONIALS
+\*-----------------------------------*/
