--- a/style.css
+++ b/style.css
@@ -153,8 +153,11 @@
   #MENU
 \*-----------------------------------*/
 
+/*-----------------------------------*\
+  #TESTIMONIALS
+\*-----------------------------------*/
 
 
 /*-----------------------------------*\
-  #TESTIMONIALS
+  #RESERVATION
 \*-----------------------------------*/
