--- a/style.css
+++ b/style.css
@@ -158,6 +158,12 @@
 \*-----------------------------------*/
 
 
+
 /*-----------------------------------*\
   #RESERVATION
+\*-----------------------------------*/
+
+
+/*-----------------------------------*\
+  #FEATURES
 \*-----------------------------------*/
