--- a/style.css
+++ b/style.css
@@ -157,13 +157,19 @@
   #TESTIMONIALS
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #RESERVATION
 \*-----------------------------------*/
 
-
 /*-----------------------------------*\
   #FEATURES
 \*-----------------------------------*/
+
+
+/*-----------------------------------*\
+  #EVENT
+\*-----------------------------------*/
+
+
+
+
