--- a/style.css
+++ b/style.css
@@ -165,11 +165,14 @@
   #FEATURES
 \*-----------------------------------*/
 
-
 /*-----------------------------------*\
   #EVENT
 \*-----------------------------------*/
 
+
+/*-----------------------------------*\
+  #FOOTER
+\*-----------------------------------*/ 
 
 
 
