--- a/style.css
+++ b/style.css
@@ -169,10 +169,13 @@
   #EVENT
 \*-----------------------------------*/
 
-
 /*-----------------------------------*\
   #FOOTER
-\*-----------------------------------*/ 
+\*-----------------------------------*/
 
 
 
+
+/*-----------------------------------*\
+  #BACK TO TOP
+\*-----------------------------------*/
