--- a/style.css
+++ b/style.css
@@ -173,9 +173,15 @@
   #FOOTER
 \*-----------------------------------*/
 
+/*-----------------------------------*\
+  #BACK TO TOP
+\*-----------------------------------*/
 
 
 
 /*-----------------------------------*\
-  #BACK TO TOP
-\*-----------------------------------*/
+  #MEDIA QUERIES
+\*-----------------------------------*/ 
+
+
+
