--- a/style.css
+++ b/style.css
@@ -113,6 +113,27 @@
   #RESET
 \*-----------------------------------*/
 
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li ( list-style: none; )
+
+a,
+img,
+data,
+span,
+input,
+button,
+select,
+ion-icon,
+textarea{ display:block; }
+
+
 /*-----------------------------------*\
   #TYPOGRAPHY
 \*-----------------------------------*/
@@ -177,11 +198,6 @@
   #BACK TO TOP
 \*-----------------------------------*/
 
-
-
 /*-----------------------------------*\
   #MEDIA QUERIES
-\*-----------------------------------*/ 
-
-
-
+\*-----------------------------------*/
