--- a/style.css
+++ b/style.css
@@ -134,39 +134,49 @@ textarea {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
-img { height: auto; }
+img {
+    height: auto;
+}
 input,
 button,
 select,
 textarea {
-  background: none;
-  border: none;
-  font: inherit;
+    background: none;
+    border: none;
+    font: inherit;
 }
 
 input,
 select,
 textarea {
-  width: 100%;
-  outline: none;
+    width: 100%;
+    outline: none;
 }
 
-button { cursor: pointer; }
-address { font-style: normal; }
+button {
+    cursor: pointer;
+}
+address {
+    font-style: normal;
+}
 
 html {
-  font-size: 10px;
-  scroll-behavior: smooth;
+    font-size: 10px;
+    scroll-behavior: smooth;
 }
 
 body {
-  background-color: var(--eerie-black-1);
-  color: var(--white);
-  
+    background-color: var(--eerie-black-1);
+    color: var(--white);
+    font-family: var(--fontFamily-dm_sans);
+    font-size: var(--fontSize-body-4);
+    font-weight: var(--weight-regular);
+    line-height: var(--lineHeight-5);
+    overflow: hidden;
 }
 
 /*-----------------------------------*\
