--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ body {
     overflow: hidden;
 }
 
+body.loaded { overflow:overlay; }
+
 /*-----------------------------------*\
   #TYPOGRAPHY
 \*-----------------------------------*/
