--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@
     box-sizing: border-box;
 }
 
-li ( list-style: none; ) a,
+li { list-style: none; } a,
 img,
 data,
 span,
@@ -179,16 +179,25 @@ body {
     overflow: hidden;
 }
 
-body.loaded { overflow:overlay; }
+body.loaded {
+    overflow: overlay;
+}
 
-body.nav-active { overflow: hidden; }
+body.nav-active {
+    overflow: hidden;
+}
 
-::-webkit-scrollbar { width: 5px; }
+::-webkit-scrollbar {
+    width: 5px;
+}
 
-::-webkit-scrollbar-track { background-color: transparent; }
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
 
-::-webkit-scrollbar-thumb { background-color: var(--gold-crayola); }
-
+::-webkit-scrollbar-thumb {
+    background-color: var(--gold-crayola);
+}
 
 /*-----------------------------------*\
   #TYPOGRAPHY
