--- a/style.css
+++ b/style.css
@@ -211,6 +211,19 @@ body.nav-active {
   #PRELOAD
 \*-----------------------------------*/
 
+.preload {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--gold-crayola);
+  
+}
+
+
+
+
 /*-----------------------------------*\
   #TOPBAR
 \*-----------------------------------*/
