--- a/style.css
+++ b/style.css
@@ -223,7 +223,36 @@ body.nav-active {
     background-color: var(--gold-crayola);
     z-index: 10;
     display: grid;
+    place-content: center;
+    justify-items: center;
+    transition: var(--transition-2);
 }
+
+.preload > * { transition: var(--transition-1); }
+
+.preload.loaded > * { opacity: 0; }
+
+.preload.loaded {
+  transition-delay: 250ms;
+  transform: translateY (100%);
+}
+
+.circle {
+  width: 112px;
+  height: 112px;
+  border-radius: var(--radius-circle);
+  border: 3px solid var(--white);
+  border-block-start-color: var(--smoky-black-3);
+  margin-block-end: 45px;
+  animation: rotate360 1s linear infinite;
+}
+
+@heyframes rotate360 {
+  0% { transform: rotate (0); }
+  100% { transform: rotate (iturn); }
+}
+
+.preload.text
 
 /*-----------------------------------*\
   #TOPBAR
