--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,6 +265,12 @@ body.nav-active {
   }
 }
 
+.preload.text {
+  background-image: var(--loading-text-gradient);
+  background-size: 500%;
+  font-size: calc(2rem + 3vw);
+}
+
 /*-----------------------------------*\
   #TOPBAR
 \*-----------------------------------*/
