--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,14 @@ body.nav-active {
   background-image: var(--loading-text-gradient);
   background-size: 500%;
   font-size: calc(2rem + 3vw);
+  font-weight: var(--weight-bold);
+  text-transform: uppercase;
+  letter-spacing: 16px;
+  padding-inline-start: 16px;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 0.5px var(--eerie-black-3);
 }
 
 /*-----------------------------------*\
