--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,7 +232,6 @@ body.nav-active {
   transition: var(--transition-2);
 }
 
-
 .preload > * {
   transition: var(--transition-1);
 }
@@ -277,60 +276,73 @@ body.nav-active {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-stroke: 0.5px var(--eerie-black-3);
+  animation: loadingText linear 2s infinite;
 }
 
-/*-----------------------------------*\
+@keyframes loadingText {
+  0% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: 0%;
+  }
+
+  /*-----------------------------------*\
   #TOPBAR
 \*-----------------------------------*/
+}
+.topbar {
+  display: none;
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #SERVICE
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #ABOUT
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #SPECIAL DISH
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #MENU
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #TESTIMONIALS
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #RESERVATION
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #FEATURES
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #EVENT
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #BACK TO TOP
 \*-----------------------------------*/
 
-/*-----------------------------------*\
+  /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
+}
